feature(base-rule-backend): Add RSQL capability. Add Core library. Rename 2 backend and 1 frontend libraries.